--- a/blog.html
+++ b/blog.html
@@ -108,15 +108,13 @@
                                     <div class="grid-list-items__item blog-card">
                                         <div class="blog-card__header">
                                             <div class="blog-card__cat-links">
-                                                <a href="blog.html">Sponsored</a>
+                                                <a href="blog.html">Informative</a>
                                             </div>
-                                            <h3 class="blog-card__title"><a href="https://www.dreamhost.com/r.cgi?287326">Need Web Hosting for Your Websites?</a></h3>
+                                            <h3 class="blog-card__title"><a href="text-editor-setup.html">How I Set Up My Text Editor for Development</a></h3>
                                         </div>
                                         <div class="blog-card__text">
                                             <p>
-                                            Need hosting for your website? We would highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                                            Enjoy 100% in-house support, guaranteed performance and uptime, 1-click installs, and a super-intuitive control 
-                                            panel to make managing your websites and projects easy. <a href="https://www.dreamhost.com/r.cgi?287326">Sign up</a> now to get started.
+                                            As a developer, the choice of your text editor can significantly impact your productivity and coding experience. In this article, I'll walk you through my personal setup, including the choice of theme and essential extensions.
                                             </p>
                                         </div>
                                     </div> <!-- end blog-card -->
