--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
                                     <div class="grid-list-items__item blog-card">
                                         <div class="blog-card__header">
                                             <div class="blog-card__cat-links">
-                                                <a href="blog.html">Informative</a>
+                                                <a href="blog.html">Development</a>
                                             </div>
                                             <h3 class="blog-card__title"><a href="text-editor-setup.html">How I Set Up My Text Editor for Development</a></h3>
                                         </div>
@@ -121,168 +121,32 @@
                                     <div class="grid-list-items__item blog-card">
                                         <div class="blog-card__header">
                                             <div class="blog-card__cat-links">
-                                                <a href="blog.html">SEO</a>
+                                                <a href="blog.html">Networking</a>
                                             </div>
-                                            <h3 class="blog-card__title"><a href="single.html">7 SEO Factors to Consider for Better Website Ranking</a></h3>
+                                            <h3 class="blog-card__title"><a href="building-a-home-network.html">Building a Home Network</a></h3>
                                         </div>
                                         <div class="blog-card__text">
                                             <p>
-                                            Quibusdam quis autem voluptatibus earum vel ex error ea magni. Rerum quam quos. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
+                                            In today's digital age, having a reliable home network is crucial for various online activities, from remote work and
+                                            video streaming to gaming and smart home automation. Whether you're setting up a new network or looking to optimize your
+                                            existing one, these tips will help you build a home network that ensures uninterrupted connectivity.
                                             </p>
                                         </div>
                                     </div> <!-- end blog-card -->
                                     <div class="grid-list-items__item blog-card">
                                         <div class="blog-card__header">
                                             <div class="blog-card__cat-links">
-                                                <a href="blog.html">Web Design</a>
+                                                <a href="blog.html">TBD</a>
                                             </div>
-                                            <h3 class="blog-card__title"><a href="single.html">5 Effective Web Design Principles</a></h3>
+                                            <h3 class="blog-card__title"><a href="">Coming Soon...</a></h3>
                                         </div>
                                         <div class="blog-card__text">
                                             <p>
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum ullam et laborum aperiam. 
-                                            Dignissimos quae voluptatibus ullam esse sapiente fugiat, rerum labore cupiditate obcaecati 
-                                            dolore necessitatibus id magni rem officia dolor nam sit laudantium. Quo eaque eveniet quibusdam unde. 
+                                            Uhhhh I'm thinking... 
                                             </p>
                                         </div>
                                     </div> <!-- end blog card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Productivity</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">The Advantages of Hiring a Consultant Rather Than An Employee Or An Agency</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Rerum quam quos. Quibusdam quis autem voluptatibus earum vel ex error ea magni. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog-card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Productivity</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">5 Marketing Productivity Apps for Your Team</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Rerum quam quos. Quibusdam quis autem voluptatibus earum vel ex error ea magni. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog-card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Marketing</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">How to Determine the Reach of Your Campaign</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Quibusdam quis autem voluptatibus earum vel ex error ea magni. Rerum quam quos. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog-card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">SEO</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">The Complete Guide to Redirects</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Eaque velit eligendi ut magnam.Quibusdam quis autem voluptatibus earum vel 
-                                            ex error ea magni. Rerum quam quos. Aut asperiores sit mollitia. Rem neque et 
-                                            voluptatem eos quia sed eligendi et. Cumque ducimus laborum doloribus facere maxime 
-                                            vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">SEO</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">What Backlinks Are & Why They Are Important for SEO</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Quibusdam quis autem voluptatibus earum vel ex error ea magni. Rerum quam quos. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog-card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Marketing</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">Why Is Data-Driven Marketing Important?</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Rerum quam quos. Quibusdam quis autem voluptatibus earum vel ex error ea magni. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Marketing</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">How to Develop Successful Marketing Strategies</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Quibusdam quis autem voluptatibus earum vel ex error ea magni. Rerum quam quos. Aut asperiores 
-                                            sit mollitia. Rem neque et voluptatem eos quia sed eligendi et. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog-card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Keyword Research</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="single.html">What Exactly Are Keywords? How to Make Use of Them for SEO</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Rem neque et voluptatem eos quia sed eligendi et. Quibusdam quis autem voluptatibus earum vel ex error ea magni. 
-                                            Rerum quam quos. Aut asperiores sit mollitia. Eaque velit eligendi ut 
-                                            magnam. Cumque ducimus laborum doloribus facere maxime vel earum quidem enim suscipit.
-                                            </p>
-                                        </div>
-                                    </div> <!-- end blog-card -->
-                                    <div class="grid-list-items__item blog-card">
-                                        <div class="blog-card__header">
-                                            <div class="blog-card__cat-links">
-                                                <a href="blog.html">Sponsored</a>
-                                            </div>
-                                            <h3 class="blog-card__title"><a href="https://www.dreamhost.com/r.cgi?287326">Need Web Hosting for Your Websites?</a></h3>
-                                        </div>
-                                        <div class="blog-card__text">
-                                            <p>
-                                            Need hosting for your website? We would highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                                            Enjoy 100% in-house support, guaranteed performance and uptime, 1-click installs, and a super-intuitive control 
-                                            panel to make managing your websites and projects easy. <a href="https://www.dreamhost.com/r.cgi?287326">Sign up</a> now to get started.
-                                            </p>
-                                        </div>
+                                    
                                     </div> <!-- end blog card -->
         
                                 </div> <!-- grid-list-items -->
@@ -331,10 +195,10 @@
 
                     <div class="s-cta__content">
                         <h2 class="text-display-title">
-                        Get started with a consultation today.
+                            Get in touch!
                         </h2>
                         <p class="lead">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis rem, esse doloribus sint eaque at debitis enim vitae minus expedita ratione dignissimos sit nostrum optio sequi. Ipsa at beatae quam.
+                            Ready to bring your vision to life? Let's collaborate!
                         </p>
                         <a href="contact.html" class="btn btn--primary">Let's Work Together</a>
                     </div>
