--- a/tech.html
+++ b/tech.html
@@ -105,10 +105,7 @@
                         </div>
                         <div class="column xl-6 lg-12 u-flexitem-x-right">
                             <p class="lead">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eos quas blanditiis, quos sint nostrum fugit aperiam 
-                            inventore optio itaque molestias corporis, ipsa tenetur eligendi nihil iste porro, natus culpa consequuntur? Maxime, 
-                            corporis tempore. Sed tenetur veritatis velit recusandae eum, molestiae voluptate ducimus laudantium esse illo 
-                            doloribus atque eligendi deleniti iusto. 
+                            Here are the areas I have experience in and will utilize on our next project...
                             </p>
                         </div>                       
                     </div>  <!-- pageintro -->       
@@ -268,7 +265,7 @@
 
                                         <ul class="list-services">
                                             <li>Updates and Upgrades</li>
-                                            <li>Performance Monitoring and Optimization/li>
+                                            <li>Performance Monitoring and Optimization</li>
                                             <li>Rapid Issue Resolution and Technical Support</li>
                                         </ul>
                                     </div>
