fixing social links

--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
                 <div class="column xl-6 lg-12">
                     <ul class="s-footer__social social-list">
                         <li>
-                            <a href="#0">
+                            <a href="https://www.linkedin.com/in/ethan-sheffield">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -287,7 +287,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://twitter.com/ethansheffdev">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -298,7 +298,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://github.com/ethansheffield/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -309,7 +309,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://ethansheffieldcomhq.slack.com/team/U06BVRMU4AZ">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
                                     <path
@@ -319,7 +319,7 @@
                                 <span class="u-screen-reader-text">Slack</span>
                             </a>
                         </li>
-                        </ul> <!-- end s-footer__social -->
+                    </ul> <!-- end s-footer__social -->
                 </div>
                 <div class="column xl-6 lg-12">
                 </div>
