--- a/text-editor-setup.html
+++ b/text-editor-setup.html
@@ -360,7 +360,7 @@
                 <div class="column xl-6 lg-12">
                     <ul class="s-footer__social social-list">
                         <li>
-                            <a href="#0">
+                            <a href="https://www.linkedin.com/in/ethan-sheffield">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -371,7 +371,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://twitter.com/ethansheffdev">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -382,7 +382,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://github.com/ethansheffield/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -393,7 +393,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://ethansheffieldcomhq.slack.com/team/U06BVRMU4AZ">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
                                     <path
