--- a/building-a-home-network.html
+++ b/building-a-home-network.html
@@ -363,7 +363,7 @@
                 <div class="column xl-6 lg-12">
                     <ul class="s-footer__social social-list">
                         <li>
-                            <a href="#0">
+                            <a href="https://www.linkedin.com/in/ethan-sheffield">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -374,7 +374,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://twitter.com/ethansheffdev">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -385,7 +385,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://github.com/ethansheffield/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill:rgba(0, 0, 0, 1);transform:;-ms-filter:">
                                     <path
@@ -396,7 +396,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#0">
+                            <a href="https://ethansheffieldcomhq.slack.com/team/U06BVRMU4AZ">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
                                     <path
