--- a/date.html
+++ b/date.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="/date assets/date images/Bowling date tonight_.png" alt="date?" class="header-img" />
+    <img src="/date assets/date images/Sarah, bowling date tonight_.png" alt="date?" class="header-img" />
     <div class="container" id="container">
         <img src="/date assets/date images/bowling pin.gif" alt="please" class="image-1" />
         <img src="/date assets/date images/bowling pin dancing.gif" alt="yes" class="image-2 hide" />
