update for gh pages strucute

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="index.html">
+                        <a class="logo" href="ethansheffield.com">
                             <!-- <h2>ES</h2> -->
                         </a>
                     </div>
@@ -66,14 +66,14 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="tech.html">Tech</a></li>
-                        <li><a href="blog.html">Journal</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/about/">About</a></li>
+                        <li><a href="/tech/">Tech</a></li>
+                        <li><a href="/blog/">Journal</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
-                        <a href="contact.html" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>                        
+                        <a href="/contact/" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>                        
                     </div> <!-- s-header__contact -->
     
                 </nav> <!-- end s-header__nav -->
@@ -165,7 +165,7 @@
                         </div> <!-- end s-about__content-main -->
 
                         <div class="s-about__content-btn grid-section-split__bottom">
-                            <a href="about.html" class="btn btn--stroke u-fullwidth">More About Me</a>
+                            <a href="/about/" class="btn btn--stroke u-fullwidth">More About Me</a>
 
                             <ul class="s-about__social social-list">
                                     <li>
@@ -290,7 +290,7 @@
                         </div> <!-- end s-expertise__content-main -->
 
                         <div class="s-expertise__content-btn grid-section-split__bottom">
-                            <a href="tech.html" class="btn btn--stroke u-fullwidth">View All Tech</a>
+                            <a href="/tech/" class="btn btn--stroke u-fullwidth">View All Tech</a>
                         </div> <!-- end s-about__content-btn -->
 
                     </div> <!-- end grid-block-->
@@ -406,7 +406,7 @@
                         <p class="lead">
                         Ready to bring your vision to life? Let's collaborate!
                         </p>
-                        <a href="contact.html" class="btn btn--primary">Let's Work Together</a>
+                        <a href="/contact/" class="btn btn--primary">Let's Work Together</a>
                     </div>
 
                 </div>
@@ -433,9 +433,9 @@
                         <div class="grid-list-items__item blog-card">
                             <div class="blog-card__header">
                                 <div class="blog-card__cat-links">
-                                    <a href="blog.html">Development</a>
+                                    <a href="/blog/">Development</a>
                                 </div>
-                                <h3 class="blog-card__title"><a href="text-editor-setup.html">How I Set Up My Text Editor for Development</a></h3>
+                                <h3 class="blog-card__title"><a href="/text-editor-setup/">How I Set Up My Text Editor for Development</a></h3>
                             </div>
                             <div class="blog-card__text">
                                 <p>
@@ -447,9 +447,9 @@
                         <div class="grid-list-items__item blog-card">
                             <div class="blog-card__header">
                                 <div class="blog-card__cat-links">
-                                    <a href="blog.html">Networking</a>
+                                    <a href="/blog/">Networking</a>
                                 </div>
-                                <h3 class="blog-card__title"><a href="building-a-home-network.html">Building a Home Network</a></h3>
+                                <h3 class="blog-card__title"><a href="/building-a-home-network/">Building a Home Network</a></h3>
                             </div>
                             <div class="blog-card__text">
                                 <p>
@@ -462,7 +462,7 @@
                         <div class="grid-list-items__item blog-card">
                             <div class="blog-card__header">
                                 <div class="blog-card__cat-links">
-                                    <a href="blog.html">TBD</a>
+                                    <a href="/blog/">TBD</a>
                                 </div>
                                 <h3 class="blog-card__title"><a href="">Coming Soon...</a></h3>
                             </div>
@@ -495,11 +495,11 @@
                 <div class="column xl-3 lg-6 md-12 s-footer__block s-footer__site-links">
                     <h3>Site Links</h3>
                     <ul class="link-list">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="tech.html">Tech</a></li>
-                        <li><a href="blog.html">Journal</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/index/">Home</a></li>
+                        <li><a href="/tech/">Tech</a></li>
+                        <li><a href="/blog/">Journal</a></li>
+                        <li><a href="/about/">About</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                     </ul>
                 </div>
                 <div class="column xl-3 lg-6 md-12 tab-12 s-footer__block s-footer__newsletter">
