--- a/tech/index.html
+++ b/tech/index.html
@@ -15,15 +15,15 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/dotcom/css/vendor.css">
+    <link rel="stylesheet" href="/dotcom/css/styles.css">
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/dotcom/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/dotcom/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/dotcom/favicon-16x16.png">
+    <link rel="manifest" href="/dotcom/site.webmanifest">
 
 </head>
 
@@ -54,7 +54,7 @@
 
                 <div class="s-header__block">
                     <div class="s-header__logo">
-                        <a class="logo" href="index.html">
+                        <a class="logo" href="ethansheffield.com">
                         </a>
                     </div>
 
@@ -64,15 +64,15 @@
                 <nav class="s-header__nav">
     
                     <ul class="s-header__menu-links">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li class="current"><a href="tech.html">Tech</a></li>
-                        <li><a href="blog.html">Journal</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/index/">Home</a></li>
+                        <li><a href="/about/">About</a></li>
+                        <li class="current"><a href="/tech/">Tech</a></li>
+                        <li><a href="/blog/">Journal</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                     </ul> <!-- s-header__menu-links -->
 
                     <div class="s-header__contact">
-                        <a href="contact.html" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>                        
+                        <a href="/contact/" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>                        
                     </div> <!-- s-header__contact -->
     
                 </nav> <!-- end s-header__nav -->
@@ -296,7 +296,7 @@
                         <p class="lead">
                         Ready to bring your vision to life? Let's collaborate!
                         </p>
-                        <a href="contact.html" class="btn btn--primary">Let's Work Together</a>
+                        <a href="/contact/" class="btn btn--primary">Let's Work Together</a>
                     </div>
 
                 </div>
@@ -319,11 +319,11 @@
                 <div class="column xl-3 lg-6 md-12 s-footer__block s-footer__site-links">
                     <h3>Site Links</h3>
                     <ul class="link-list">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="tech.html">Tech</a></li>
-                        <li><a href="blog.html">Journal</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="ethansheffield.com">Home</a></li>
+                        <li><a href="/tech/">Tech</a></li>
+                        <li><a href="/blog/">Journal</a></li>
+                        <li><a href="/about/">About</a></li>
+                        <li><a href="/contact/">Contact</a></li>
                     </ul>
                 </div>
                 <div class="column xl-3 lg-6 md-12 tab-12 s-footer__block s-footer__newsletter">
@@ -409,8 +409,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/dotcom/js/plugins.js"></script>
+    <script src="/dotcom/js/main.js"></script>
 
 </body>
 </html>
