--- a/about/index.html
+++ b/about/index.html
@@ -15,15 +15,15 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="/dotcom/css/vendor.css">
-    <link rel="stylesheet" href="/dotcom/css/styles.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
 </head>
 
@@ -116,10 +116,10 @@
                     <div class="row pagemedia">
                         <d class="column xl-12">
                             <figure class="page-media">                                
-                                <img src="images/thumbs/about/about-1200.jpg" 
-                                     srcset="images/thumbs/about/about-2400.jpg 2400w, 
-                                             images/thumbs/about/about-1200.jpg 1200w, 
-                                             images/thumbs/about/about-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
+                                <img src="/images/thumbs/about/about-1200.jpg" 
+                                     srcset="/images/thumbs/about/about-2400.jpg 2400w, 
+                                             /images/thumbs/about/about-1200.jpg 1200w, 
+                                             /images/thumbs/about/about-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
                             </figure>
                         </d>
                     </div> <!-- end pagemedia -->
@@ -337,8 +337,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="/dotcom/js/plugins.js"></script>
-    <script src="/dotcom/js/main.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 </html>
