--- a/building-a-home-network/index.html
+++ b/building-a-home-network/index.html
@@ -15,15 +15,15 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="/dotcom/css/vendor.css">
-    <link rel="stylesheet" href="/dotcom/css/styles.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/dotcom/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/dotcom/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/dotcom/favicon-16x16.png">
-    <link rel="manifest" href="/dotcom/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
 </head>
 
@@ -56,7 +56,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="ethansheffield.com">
-                            <img src="images/logo.svg" alt="Homepage">
+                            <img src="/images/logo.svg" alt="Homepage">
                         </a>
                     </div>
 
@@ -123,10 +123,10 @@
                 <div class="row entry__media">
                     <div class="column xl-12">
                         <figure class="featured-image">
-                            <img src="images/thumbs/home-net/home-net-1200.jpg" 
-                                 srcset="images/thumbs/home-net/home-net-2400.jpg 2400w, 
-                                         images/thumbs/home-net/home-net-1200.jpg 1200w, 
-                                         images/thumbs/home-net/home-net-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
+                            <img src="/images/thumbs/home-net/home-net-1200.jpg" 
+                                 srcset="/images/thumbs/home-net/home-net-2400.jpg 2400w, 
+                                         /images/thumbs/home-net/home-net-1200.jpg 1200w, 
+                                         /images/thumbs/home-net/home-net-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
                         </figure>
                     </div>
                 </div> <!-- end entry__media -->
@@ -205,10 +205,10 @@
                             </ul>
             
                             <figure class="alignwide">
-                                <img src="images/thumbs/home-net/vpn-1200.jpg" 
-                                     srcset="images/thumbs/home-net/vpn-2400.jpg 2400w, 
-                                             images/thumbs/home-net/vpn-1200.jpg 1200w, 
-                                             images/thumbs/home-net/vpn-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
+                                <img src="/images/thumbs/home-net/vpn-1200.jpg" 
+                                     srcset="/images/thumbs/home-net/vpn-2400.jpg 2400w, 
+                                             /images/thumbs/home-net/vpn-1200.jpg 1200w, 
+                                             /images/thumbs/home-net/vpn-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
                             </figure>
 
                             <h3>Wired vs. Wireless Connections</h3>
@@ -422,8 +422,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="/dotcom/js/plugins.js"></script>
-    <script src="/dotcom/js/main.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 </html>
