--- a/contact/index.html
+++ b/contact/index.html
@@ -15,15 +15,15 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="/dotcom/css/vendor.css">
-    <link rel="stylesheet" href="/dotcom/css/styles.css">
+    <link rel="stylesheet" href="/css/vendor.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/dotcom/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/dotcom/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/dotcom/favicon-16x16.png">
-    <link rel="manifest" href="/dotcom/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
 </head>
 
@@ -293,8 +293,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="/dotcom/js/plugins.js"></script>
-    <script src="/dotcom/js/main.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 </html>
